k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proyecto-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: proyecto
  template:
    metadata:
      labels:
        app: proyecto
    spec:
      containers:
      - name: web
        image: jquiej/proyecto-so-2:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: uploads
          mountPath: /var/www/html/uploads
      volumes:
      - name: uploads
        persistentVolumeClaim:
          claimName: uploads-pvc
