k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proyecto-service
spec:
  type: LoadBalancer
  selector:
    app: proyecto
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
